--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
         <div class="container">
           <h1 class="title">
             Movie Fight
-            <span class="icon">
+            <!-- <span class="icon">
               <i class="fas fa-film"></i>
-            </span>
+            </span> -->
           </h1>
         </div>
       </div>
     </section>
     <div class="container">
-      <input type="text">
+      <div class="dropdown is-active">
+        <input type="text">
+        <div class="dropdown-menu">
+          <div class="dropdown-content">
+            
+          </div>
+        </div>
+      </div>
+      
+      <div id="target"></div>
     </div>
+    <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
