--- a/index.html
+++ b/index.html
@@ -26,16 +26,8 @@
       </div>
     </section>
     <div class="container">
-      <div class="dropdown is-active">
-        <input type="text">
-        <div class="dropdown-menu">
-          <div class="dropdown-content">
-            
-          </div>
-        </div>
-      </div>
+      <div class="autocomplete"></div>
       
-      <div id="target"></div>
     </div>
     <script src="utils.js"></script>
     <script src="index.js"></script>
