--- a/index.html
+++ b/index.html
@@ -26,10 +26,27 @@
       </div>
     </section>
     <div class="container">
-      <div class="autocomplete"></div>
-      <div class="summary"></div>
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div id="left-summary"></div>
+        </div>
+
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div id="right-summary"></div>
+        </div>
+      </div>
+
+      <div class="is-half notification is-primary tutorial">
+        <h1 class="title">Busca una pelicula en ambos lados</h1>
+        <p class="subtitle">Podras ver cual es la mejor</p>
+      </div>
+
+
     </div>
     <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
