--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="hero is-primary is-bold">
+    <section class="hero is-dark is-bold">
       <div class="hero-body">
-        <div class="container">
+        <div class="container ">
           <h1 class="title">
             Movie Fight
-            <!-- <span class="icon">
+            <span class="icon">
               <i class="fas fa-film"></i>
-            </span> -->
+            </span>
           </h1>
         </div>
       </div>
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <div class="is-half notification is-primary tutorial">
+      <div class="is-half notification is-dark tutorial">
         <h1 class="title">Busca una pelicula en ambos lados</h1>
         <p class="subtitle">Podras ver cual es la mejor</p>
       </div>
